syntax = "proto3";

package jobworkerp.runner;

message SavedWorkflowArgs {
  // # Input
  // String input for the workflow context
  // Can be a plain string or JSON formatted string
  string input = 1;

  // # Workflow Context
  // Additional context information for workflow execution
  // Can be a plain string or JSON formatted string
  // context can be used in Jq expressions or Liquid templates variables
  optional string workflow_context = 2;
}
